--- a/u.toml
+++ b/u.toml
@@ -1,3 +1,3 @@
 [UPCASE]
 desc = "You shouldn't see this definition"
-full = "Because the keyword here is in uppercase"
+more = "Because the keyword here is in uppercase"
